--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-slate
 title: Statistical Physics For Optimization and Learning
 description : A Set of Lectures given at Duke in 2018 by Lenka Zdeborova and Florent Krzakala 
+logo : Screenshot 2019-03-18 at 16.26.19.png	
